--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Visualisation/model_outcomes/baseline.csv
 Visualisation/model_outcomes/baseline.csv
 Visualisation/model_outcomes/baseline.csv
 Visualisation/model_outcomes/baseline.csv
+readme_local.txt
