--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Visualisation/model_outcomes/baseline.csv
 Visualisation/model_outcomes/baseline.csv
 Visualisation/model_outcomes/baseline.csv
 readme_local.txt
+venv/
