--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ Visualisation/model_outcomes/baseline.csv
 Visualisation/model_outcomes/baseline.csv
 readme_local.txt
 venv/
+#.idea/
+__pycache__/
