fix gitignore and push params

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,7 @@
 Figs
-
 CSV_output
-Parameters/age_and_sex.csv
 saved_runs
 Visualisation/model_outcomes/baseline_new.csv
-Visualisation/model_outcomes/baseline.csv
-Visualisation/model_outcomes/baseline.csv
-Visualisation/model_outcomes/baseline.csv
-*.csv
-*.csv
-Visualisation/model_outcomes/baseline.csv
-Visualisation/model_outcomes/baseline.csv
-*.csv
-Visualisation/model_outcomes/baseline.csv
-Visualisation/model_outcomes/baseline.csv
 Visualisation/model_outcomes/baseline.csv
 readme_local.txt
 venv/
@@ -22,6 +10,6 @@ __pycache__/
 *.pyc
 *.pyo
 .DS_Store
-fs/figs
-fs/model_results
-fs/reports
+fs/figs/
+fs/model_results/
+fs/reports/
